# Arcsilence

./: .dockerignore  .gitignore  ARCIUM_BUILD_STATUS.md  ARCIUM_FUNCTIONALITY_STATUS.md  ARCIUM_MPC_ENABLED.md  ARCIUM_SDK_LIMITATION.md  ARCIUM_TRANSACTION_SIZE_ISSUE.md  ARCIUM_V0.4_MIGRATION.md  Anchor.toml  Arcium.toml  BOUNTY_QUALIFICATION.md  BPF_TOOLCHAIN_FIX.md  Cargo.toml  DAPP_COMPLETE.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_STATUS.md  DOCKER_README.md  Dockerfile  ERRORS_AND_FIXES.md  FINAL_SUMMARY.md  FIX_PROGRAM_ID_ERROR.md  ONCHAIN_VERIFICATION.md  ORDER_ACCUMULATION_FIX.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  SETUP_GUIDE.md  STATUS.md  SUBMISSION_READY.md  TELL_YOUR_FRIEND.md  TROUBLESHOOTING_GUIDE.md  build  build-docker.sh  cancel-orders.ts  check-deployment.sh  close-all-orders.ts  create-fresh-market.ts  create-market.ts  debug-orders.ts  docker-compose.override.yml  (+21 more)
.cargo/: config.toml
apps/web/: README.md  package.json  tsconfig.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: SolanaProvider.tsx  TokenBalance.tsx  WalletButton.tsx
apps/web/src/lib/: darkpool.json  darkpoolClient.ts
darkpool-matcher/: Anchor.toml  Cargo.toml  README.md
darkpool-matcher/encrypted-ixs/: Cargo.toml
darkpool-matcher/encrypted-ixs/src/: circuits.rs  lib.rs  matching.rs  test_simple.rs
darkpool-matcher/programs/darkpool-matcher/: Cargo.toml
darkpool-matcher/programs/darkpool-matcher/src/: lib.rs
darkpool-matcher/tests/: test_project.ts
frontend/: App.tsx  index.html  package-lock.json  package.json  types.ts
frontend/components/: Layout.tsx  UI.tsx
frontend/pages/: ArchitecturePage.tsx  HowItWorksPage.tsx  LandingPage.tsx  TradePage.tsx  UseCasesPage.tsx
postgres/: init.sql
programs/darkpool/: Anchor.toml  Cargo.toml  package.json
programs/darkpool-mxe/: Anchor.toml  Cargo.toml
programs/darkpool-mxe/src/: lib.rs
programs/darkpool/src/: lib.rs
programs/darkpool/tests/: darkpool.ts
redis/: redis.conf
scripts/: README.md  bootstrap-market.ts  check-onchain.sh
services/solver-relayer/: .eslintrc.cjs  README.md  package.json  tsconfig.json
services/solver-relayer/src/: arciumClient.ts  config.ts  domain.ts  index.ts  matcher.ts  server.ts  solanaClient.ts
services/solver-relayer/src/idl/: README.md  darkpool-mxe.json  darkpool.json
(+6 files in other folders)
