[workspace]
members = [
    "programs/darkpool",
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

# NOTE: encrypted-ixs is NOT in this workspace due to dependency conflicts
# Build it separately: cd services/solver-relayer/encrypted-ixs && cargo build --features arcis

