[package]
name = "darkpool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darkpool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "arcium-anchor/idl-build"]
signer = []

[dependencies]
anchor-lang = "0.32.1"
anchor-spl = "0.32.1"
arcium-anchor = "0.4.0"
