[package]
name = "darkpool-matcher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darkpool_matcher"

[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
arcium-anchor = "0.4.0"
arcium-macros = "0.4.0"
arcium-client = { version = "0.4.0", features = ["transactions"] }
bytemuck = { version = "1.17", features = ["derive", "min_const_generics"] }
